// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpdateWalletName > should render 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-8 pb-24 pt-8 sm:pb-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 mt-1 text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex min-w-0 flex-col css-1bcidjh"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-1q57rjh"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-j6ajdm"
              >
                <button
                  class="css-6419sw"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-qrwjsp"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-8 pb-24 pt-8 sm:pb-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 mt-1 text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex min-w-0 flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-1hr3i2s"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg
                            id="circle-exclamation-mark"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="10"
                                r="9"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 10.5v-5"
                                stroke-linecap="round"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 14h0"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </g>
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-j6ajdm"
              >
                <button
                  class="css-6419sw"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-qrwjsp"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 2`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-8 pb-24 pt-8 sm:pb-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 mt-1 text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex min-w-0 flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-1hr3i2s"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ark wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg
                            id="circle-exclamation-mark"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="10"
                                r="9"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 10.5v-5"
                                stroke-linecap="round"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 14h0"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </g>
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-j6ajdm"
              >
                <button
                  class="css-6419sw"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-qrwjsp"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 3`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-8 pb-24 pt-8 sm:pb-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 mt-1 text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex min-w-0 flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-1hr3i2s"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg
                            id="circle-exclamation-mark"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="10"
                                r="9"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 10.5v-5"
                                stroke-linecap="round"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 14h0"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </g>
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-j6ajdm"
              >
                <button
                  class="css-6419sw"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-qrwjsp"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 4`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-8 pb-24 pt-8 sm:pb-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 mt-1 text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex min-w-0 flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-1hr3i2s"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg
                            id="circle-exclamation-mark"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="10"
                                r="9"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 10.5v-5"
                                stroke-linecap="round"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 14h0"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </g>
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-j6ajdm"
              >
                <button
                  class="css-6419sw"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-qrwjsp"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show error message when name consists only of whitespace 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-8 pb-24 pt-8 sm:pb-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 mt-1 text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex min-w-0 flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-1hr3i2s"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="WALLETS.VALIDATION.ALIAS_REQUIRED"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg
                            id="circle-exclamation-mark"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="10"
                                r="9"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 10.5v-5"
                                stroke-linecap="round"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 14h0"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </g>
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-j6ajdm"
              >
                <button
                  class="css-6419sw"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-qrwjsp"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show error message when name exceeds 42 characters 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-8 pb-24 pt-8 sm:pb-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 mt-1 text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex min-w-0 flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-1hr3i2s"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="Wallet Name should have at most 42 characters"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg
                            id="circle-exclamation-mark"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="10"
                                r="9"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 10.5v-5"
                                stroke-linecap="round"
                                stroke-miterlimit="10"
                              />
                              <path
                                d="M10 14h0"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </g>
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-j6ajdm"
              >
                <button
                  class="css-6419sw"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-qrwjsp"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
